--- a/odin_project_2/index.html
+++ b/odin_project_2/index.html
@@ -17,24 +17,24 @@
    <div class="intro"><h2>STURCTURAL ALUMINIUM/STEEL ENGINEERING</h2>
     <p>Specialist in A-Z Aluminuim Products,Roofing,Cladding and PVC Suspended Cellings</p>
    <div class="button"> <P>customer care</p></div></div>
-   <div class="roof"><img src="./images/roof.jpg" height="300px" alt="picture of a roof" /> </div></div>
+   <div class="roof"><img src="./images/roof.jpg" height="65%"  alt="picture of a roof" /> </div></div>
 
    <div class="some-products"> <h2>SOME OF OUR PRODUCTS</h2> 
   <div class="third-container">
-   <img src="./images/sheet 1.jpg" height="200px" />
-   <img src="./images/sheet 2.jpg" height="200px" />
-   <img src="./images/sheet 3.jpg" height="200px" />
-   <img src="./images/sheet 4.jpg" height="200px " width="300px" /></div></div>
+  <div class="jpg"> <img src="./images/sheet 1.jpg" height="400px" />
+   <img src="./images/sheet 2.jpg" height="400px" />
+   <img src="./images/sheet 3.jpg" height="400px" />
+   <img src="./images/sheet 4.jpg" height="400px " width="500px" /></div></div></div>
 
     <div class="others"><h3>Other services</h3>
     <ul><ul>Fabrication and insullation of aluminium doors and windows</ul>
         <ul>Buliding maintainace</ul>
         <ul>Office partitioning</ul></ul>
     </div>
-        <div class="ending">
-        <div class="last-container">
-        <p>For media and query contact customer care</p>
-        <p> click here for complaint form</p>
+        <div class="ending-container">
+        <div class="last">
+        <h3>For media and query contact customer care</h3>
+       <p> click here for complaint form</p>
        <div class="click"><p> here</p></div></div></div>
         <footer>Copyright @MOLADEX2023</footer>
 
